// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Header component with clear active 1`] = `
<header
  class="fgayq2g"
  data-testid="app-header"
>
  <input
    class="f10tqc7z"
    placeholder="AnyPlaceholder"
    type="text"
  />
  <button
    class="f1blz7da"
  >
    AnyButtonLabel
  </button>
</header>
`;

exports[`Renders Header component with clear disabled 1`] = `
<header
  class="fgayq2g"
  data-testid="app-header"
>
  <input
    class="f10tqc7z"
    placeholder="AnyPlaceholder"
    type="text"
  />
  <button
    class="f1blz7da"
    disabled=""
  >
    AnyButtonLabel
  </button>
</header>
`;
